# MirageENGiNE

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Mirage.sln  MirageENGiNE.sln  README.md
CMakeBuild/: linux_x86_local.sh  linux_x86_os.sh
Mirage/: .gitignore  Mirage.vcxproj  Mirage.vcxproj.filters  README.md
Mirage/data/: config.ini
Mirage/data/shaders/: basicmesh.frag.glsl
Mirage/lib/windows/x86/: glfw3.lib
Mirage/res/: config.ini
Mirage/res/models/: cornellbox_original.mtl
Mirage/res/models/crytek_sponza/: crytek_sponza.mtl
Mirage/res/models/crytek_sponza/textures/: spnza_bricks_a_bump.tga  sponza_arch_diff.tga  sponza_arch_spec.tga  sponza_column_c_diff.tga  vase_plant_spec.tga
Mirage/src/: config.h  macros.h  main.cpp  test_game.cpp  test_game.h
Mirage/src/core/: engine.cpp  engine.h  mesh.cpp  mesh.h  runstate.h  transform.cpp  transform.h  vertex.cpp  vertex.h
Mirage/src/core/material/: material_base.cpp  material_base.h
Mirage/src/core/mesh/: mesh_base.cpp  mesh_base.h
Mirage/src/core/model_formats/: mesh_converters.cpp  mesh_converters.h  wavefront_file.cpp  wavefront_file.h
Mirage/src/game/: game.cpp  game.h  gobject.cpp  gobject.h
Mirage/src/game/components/: camera_perspective.h
Mirage/src/glad/: glad.h
Mirage/src/graphics/: camera.cpp  camera.h  gfxengine.cpp  gfxengine.h  renderable_mesh.cpp  renderable_mesh.h  rendercmd.cpp  vertex.cpp  vertex.h  window.cpp  window.h
Mirage/src/graphics/camera/: camera.cpp  camera.h
Mirage/src/graphics/glsl/: shader.cpp  shader.h  uniform.h
Mirage/src/graphics/mesh/: mesh_renderer.cpp  mesh_renderer.h
Mirage/src/imgui/: imgui_impl_glfw_gl3.cpp
Mirage/src/util/: inifile.cpp  inifile.h  strutil.cpp  strutil.h  txtfile.cpp  txtfile.h
MirageENGiNE_Engine/: .gitignore  MirageENGiNE_Engine.vcxproj  MirageENGiNE_Engine.vcxproj.filters  README.md
MirageENGiNE_Engine/data/: config.ini
MirageENGiNE_Engine/data/shaders/: basicmesh.frag.glsl  basicmesh.vert.glsl  version.h
MirageENGiNE_Engine/src/: macros.h  main.cpp  test_game.cpp
MirageENGiNE_Engine/src/core/: engine.cpp  engine.h  input.cpp  input.h  transform.cpp  transform.h  vertex.cpp  vertex.h
MirageENGiNE_Engine/src/core/material/: material_base.cpp  material_base.h
MirageENGiNE_Engine/src/core/mesh/: mesh_base.cpp  mesh_base.h
MirageENGiNE_Engine/src/core/model_formats/: mesh_converters.cpp  mesh_converters.h  wavefront_file.cpp  wavefront_file.h
MirageENGiNE_Engine/src/game/: game.cpp  game.h  gcomponent.cpp  gcomponent.h  gobject.cpp  gobject.h
MirageENGiNE_Engine/src/game/components/: camera_perspective.cpp  camera_perspective.h  freelook.cpp  freelook.h  freemove.cpp  freemove.h  model_basic.cpp  model_basic.h
MirageENGiNE_Engine/src/graphics/: gfxengine.cpp  gfxengine.h  rendercmd.cpp  rendercmd.h  window.cpp  window.h
MirageENGiNE_Engine/src/graphics/camera/: camera.cpp  camera.h
MirageENGiNE_Engine/src/graphics/glsl/: shader.cpp  shader.h  uniform.h
MirageENGiNE_Engine/src/graphics/material/: texture.cpp  texture.h
MirageENGiNE_Engine/src/graphics/mesh/: mesh_renderer.cpp  mesh_renderer.h
MirageENGiNE_Engine/src/util/: inifile.cpp  inifile.h  strutil.h  txtfile.cpp
MirageENGiNE_Testing/: .gitignore  MirageTest.rc  RCa10248
MirageTest/: MirageTest.vcxproj  MirageTest.vcxproj.filters  README.md  resource.h
MirageTest/data/: testconfig.ini
MirageTest/src/: test_camera.cpp  test_inifile.cpp
